# yarc

./: .gitignore  CMakeLists.txt  README.md  yarc.c  yarc.h
.github/workflows/: codeql-analysis.yml
app/: .gitignore  CMakeLists.txt  yarc.c
cmake/: YarcBundle.cmake
include/yarc/: yarc.h
libyarc/: CMakeLists.txt  yarc.c
sample/: .gitignore  CMakeLists.txt  colors.json  main.c  sample.c
